--- a/vue-cli/heroes/package.json
+++ b/vue-cli/heroes/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-router": "^3.4.9"
   },
   "browserslist": [
     "> 1%",
